<resources>
    <string name="app_name">Jokenpô</string>
    <string name="computerChoiceTitle">Escolha do computador</string>
    <string name="defaultResultText">Faça sua escolha</string>
    <string name="playerWinText">Parabéns, você ganhou!</string>
    <string name="computerWinText">Que pena, você perdeu...</string>
    <string name="drawText">Empate!</string>
    <string name="score">Placar</string>
    <string name="vsString">VS</string>
    <string name="reputationString">Reputação</string>
    <string name="reputationDefaultValue">Neutra</string>
    <string name="scoreDefaultValue">0</string>
    <string name="reputationGood1">Sortudo</string>
    <string name="reputationGood2">Profissional</string>
    <string name="reputationBad1">Azarado</string>
    <string name="reputationBad2">O Pior de Todos</string>
    <string name="reputationMax">Mestre do Jokenpô</string>
</resources>
